--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,9 @@
 spring.jpa.hibernate.ddl-auto = update
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.1.74:3306/dbname?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://192.168.1.74:3306/dbname?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://192.168.1.222:3306/dbname?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=hugo
 spring.datasource.password=hugo1234
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
