--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.password=sasa
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.data.rest.base-path=/api
+
+allowed.origins=http://localhost:4200
+
+spring.data.rest.detection-strategy=ANNOTATED
