--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.data.rest.base-path=/api
 allowed.origins=http://localhost:4200
 
 spring.data.rest.detection-strategy=ANNOTATED
+
+okta.oauth2.client-id={yourClientId}
+okta.oauth2.issuer=https://{yourOktaDomain}/oauth2/default
