--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-## Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://192.168.1.74:3306/dbname?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.url=jdbc:mysql://localhost:3306/full-stack-ecommerce?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
@@ -26,7 +22,10 @@ okta.oauth2.issuer=https://{yourOktaDomain}/oauth2/default
 #####
 
 # Server web port
-server.port=8443
+# server.port=8443
+
+# QA demo
+server.port=9898
 
 # Enable HTTPS support (only accept HTTPS requests)
 server.ssl.enabled=true
