--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,11 @@ server.ssl.key-store-password=secret
 
 # Keystore format
 server.ssl.key-store-type=PKCS12
+
+#####
+#
+# Payment Processing with Stripe
+#
+#####
+
+stripe.key.secret={yourStripeSecretKey}
